--- a/multiapps/src/app/reactive-form/reactive-form.component.html
+++ b/multiapps/src/app/reactive-form/reactive-form.component.html
@@ -1,3 +1,4 @@
+<div class="container pt-2">
 <form class="row g-3 needs-validation" [formGroup]="userForm">
     <div class="col-md-4">
         <label class="form-label">First name</label>
@@ -58,6 +59,8 @@
         </div>
     </div>
     <div class="col-12">
-        <button class="btn btn-primary" type="button" (click)="submitUser()">Submit form</button>
+        <button class="btn btn-primary" type="button" (click)="submitUser()">Submit User</button>
     </div>
 </form>
+</div>
+
