--- a/multiapps/src/app/crud/crud.component.html
+++ b/multiapps/src/app/crud/crud.component.html
@@ -17,7 +17,7 @@
                     <table class="table mt-2">
                         <thead>
                             <tr>
-                                <th>S.No</th>
+                                <th>Id</th>
                                 <th>First Name</th>
                                 <th>Last Name</th>
                                 <th>Email Id</th>
@@ -27,9 +27,19 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-
-                            </tr>
+                            @for (item of studentData; track $index) {
+                            <tr >
+                             <td>{{item.id}}</td>
+                             <td>{{item.firstName}}</td>
+                             <td>{{item.lasttName}}</td>
+                             <td>{{item.email}}</td>
+                             <td>{{item.mobileNumber}}</td>
+                             <td>{{item.city}}</td>
+                             <td>
+                                <button class="btn btn-primary me-1" data-bs-toggle="modal" data-bs-target="#staticBackdrop" >Edit</button>
+                                <button class="btn btn-danger">Delete</button>
+                             </td>
+                            </tr>}
                         </tbody>
                     </table>
                 </div>
@@ -48,7 +58,7 @@
                 <h1 class="modal-title fs-5" id="staticBackdropLabel">Add New Student</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form [formGroup]="formvalue" (ngSubmit)="poststudent()">
+            <form [formGroup]="studentForm" (ngSubmit)="poststudent(this.studentForm.value)">
                 <div class="modal-body">
 
                     <div class="mb-3">
@@ -59,13 +69,15 @@
                         <label class="form-label" for="lastname">Last Name</label>
                         <input type="text" class="form-control" id="lastname" formControlName="lasttName">
                     </div>
+
                     <div class="mb-3">
                         <label class="form-label" for="email">Email</label>
-                        <input type="email" class="form-control" id="email" formArrayName="email">
+                        <input type="text" class="form-control" id="email" formControlName="email">
                     </div>
+                   
                     <div class="mb-3">
                         <label class="form-label" for="mobile">Mobile Number</label>
-                        <input type="text" class="form-control" id="mobile" formControlName="mobileNumber">
+                        <input type="number" class="form-control" id="mobile" formControlName="mobileNumber">
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="city">City</label>
@@ -76,7 +88,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" type="submit">save</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" type="submit">save</button>
                 </div>
             </form>
         </div>
